objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ADM_Refresh_Value__c</fullName>
        <label>ADM Refresh Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_of_responsibility__c</fullName>
        <inlineHelpText>Please choose a category according to the department. This field is used for marketing purposes!</inlineHelpText>
        <label>Area of responsibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-Level, General Management</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Purchasing Department</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Former_Company__c</fullName>
        <label>CA Former Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_for_search__c</fullName>
        <formula>TRIM(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Fax,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For easier searching</inlineHelpText>
        <label>Fax for search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUniversalID__c</fullName>
        <externalId>true</externalId>
        <label>IsUniversalID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_ISO_639_1__c</fullName>
        <formula>/* Languages in two letters code ISO for Clicktools surveys usage */ 
IF (ISPICKVAL(ptt_gl_Communication_Language__c,&quot;Dutch&quot;), &quot;nl&quot;, 
IF (ISPICKVAL(ptt_gl_Communication_Language__c,&quot;English&quot;), &quot;en&quot;, 
IF (ISPICKVAL(ptt_gl_Communication_Language__c,&quot;French&quot;), &quot;fr&quot;, 
IF (ISPICKVAL(ptt_gl_Communication_Language__c,&quot;German&quot;), &quot;de&quot;, 
IF (ISPICKVAL(ptt_gl_Communication_Language__c,&quot;Italian&quot;), &quot;it&quot;, 
IF (ISPICKVAL(ptt_gl_Communication_Language__c,&quot;Polish&quot;), &quot;pl&quot;, 
IF (ISPICKVAL(ptt_gl_Communication_Language__c,&quot;Portuguese&quot;), &quot;pt&quot;, 
IF (ISPICKVAL(ptt_gl_Communication_Language__c,&quot;Spanish&quot;), &quot;es&quot;, 
&quot;en&quot;
))))))))</formula>
        <label>Languages ISO-639-1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Survey_date__c</fullName>
        <description>Date when a Survey was completed.</description>
        <label>Last Completed Survey date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Group_ES__c</fullName>
        <label>Marketing Group (ES)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G1: PT oriented</fullName>
                </value>
                <value>
                    <fullName>G2: Competitor oriented</fullName>
                </value>
                <value>
                    <fullName>G3: Tech sceptical</fullName>
                </value>
                <value>
                    <fullName>G4: No budget</fullName>
                </value>
                <value>
                    <fullName>G5: Sees no need</fullName>
                </value>
                <value>
                    <fullName>G6: Covered</fullName>
                </value>
                <value>
                    <fullName>G7: Reluctant</fullName>
                </value>
                <value>
                    <fullName>G8: Not potential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <inlineHelpText>Please select which products are used by this contact.</inlineHelpText>
        <label>Used products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ALI - ALIGNEO</fullName>
                </value>
                <value>
                    <fullName>ALI - ALIGNEO EX</fullName>
                </value>
                <value>
                    <fullName>ALI - ALIGNMENT CENTER</fullName>
                </value>
                <value>
                    <fullName>ALI - ALIGNMENT RELIABILITY CENTER 4.0</fullName>
                </value>
                <value>
                    <fullName>ALI - ALIGNMENT REPORTER</fullName>
                </value>
                <value>
                    <fullName>ALI - CENTRALIGN Advanced</fullName>
                </value>
                <value>
                    <fullName>ALI - CENTRALIGN Expert</fullName>
                </value>
                <value>
                    <fullName>ALI - CENTRALIGN Standard</fullName>
                </value>
                <value>
                    <fullName>ALI - CENTRALIGN Ultra RS5</fullName>
                </value>
                <value>
                    <fullName>ALI - GEO CENTER</fullName>
                </value>
                <value>
                    <fullName>ALI - HYDRALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - Hydropower</fullName>
                </value>
                <value>
                    <fullName>ALI - INCLINEO</fullName>
                </value>
                <value>
                    <fullName>ALI - LEVALIGN Expert</fullName>
                </value>
                <value>
                    <fullName>ALI - LEVALIGN Ultra</fullName>
                </value>
                <value>
                    <fullName>ALI - old - GEO</fullName>
                </value>
                <value>
                    <fullName>ALI - old - OPTALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - old - ROTALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart EX</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart RS</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart RS5</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart RS5 BT</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN smart straightntess</fullName>
                </value>
                <value>
                    <fullName>ALI - OPTALIGN touch</fullName>
                </value>
                <value>
                    <fullName>ALI - PENTALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - PERMALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - PROPALIGN</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN PRO EX</fullName>
                </value>
                <value>
                    <fullName>ALI - ROTALIGN smart EX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportCardUpdateCount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set by Clicktools when a completed ReportCard is received. This is unchecked by a workflow rule that adds a count to the number of surveys received.</inlineHelpText>
        <label>ReportCardUpdateCount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReportCard_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total ReportCards provided by the contact in the last year (automatically counted &amp; updated)</inlineHelpText>
        <label>ReportCard count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReportCard_optout__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the contact has opted in to receiving ReportCards.</inlineHelpText>
        <label>ReportCard Optout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_as_Account_Owner__c</fullName>
        <formula>IF (Account.Owner.Id ==  Owner.Id , True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If True (checked) the Contact Owner is the same as Account Owner.
If False (unchecked) the Contact Owner is different than Account Owner.</inlineHelpText>
        <label>Same as Account Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Shipping_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Chose this field to transfer Shipping Address instead of Billing address</inlineHelpText>
        <label>Transfer Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIP_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Very important client.</inlineHelpText>
        <label>VIP contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Account_Name_Local__c</fullName>
        <formula>Account.sf42_jp_Account_Name_jp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Local</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Active_Contact_Owner__c</fullName>
        <description>To check if the Contact Owner is Active.</description>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsActive Contact Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_CC_Emails_to__c</fullName>
        <inlineHelpText>Type here email addresses which will recipe Copy of Email sent to this contact.
Separate list by semicolon &quot;;&quot;.</inlineHelpText>
        <label>CC Emails to</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Cretaed_From_Lead_id__c</fullName>
        <description>This field hold a value of Lead id which was the source for this contact.</description>
        <label>Created From Lead ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Double_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Double Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contact agreed to receive e-mails.</inlineHelpText>
        <label>Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Email_is_auto_generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate that email address was automatically generated based on firs name last name and company name. To delete after 15.01.2013</description>
        <label>Email is auto generated to delele</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_FormSubmissionID__c</fullName>
        <description>Field to store the Pardot Form submission id delivered from website.</description>
        <label>FormSubmissionID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Last_Customer_URL__c</fullName>
        <label>Last Customer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ptt_Name_w_umaults__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LastName,&quot;ae&quot;,&quot;ä&quot;),&quot;oe&quot;,&quot;ö&quot;),&quot;ue&quot;,&quot;ü&quot;),&quot;ss&quot;,&quot;ß&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name w umaults</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Name_with_umaults__c</fullName>
        <description>This field is filled by trigger. It converts German Mueler to Müller.</description>
        <label>Name with umaults</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Name_without_umaults__c</fullName>
        <description>This field is filled by trigger. It converts German Müller to Mueler</description>
        <label>Name without umaults</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Name_wo_umaults__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LastName,&quot;ä&quot;,&quot;ae&quot;),&quot;ö&quot;,&quot;oe&quot;),&quot;ü&quot;,&quot;ue&quot;),&quot;ß&quot;,&quot;ss&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name wo umaults</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Newsletter is intended to indicate, that the lead or contact has registered for a newsletter.</description>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Pardot_Task_Comment__c</fullName>
        <defaultValue>&quot;PardotContent#NA&quot;</defaultValue>
        <label>Pardot Task Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ptt_Pardot_Task_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pardot Task Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_Pardot_Task_Subject__c</fullName>
        <defaultValue>&quot;PardotContent#NA&quot;</defaultValue>
        <label>Pardot Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_PowerOfOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ptt_Survey_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the Customer not agree to receive a surveys communication.</description>
        <label>Survey Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_be_Send_paper_mail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for Belgium to be compatible with old system.</description>
        <inlineHelpText>Checked = YES send paper mail.
Unchecked = DON&apos;T send paper mail.</inlineHelpText>
        <label>Send paper mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_contact_owner__c</fullName>
        <formula>OwnerId</formula>
        <label>Contact Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_gl_Academic_Title__c</fullName>
        <label>Academic Title.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_gl_Communication_Language__c</fullName>
        <inlineHelpText>Please chose which language is most preferred for communication.</inlineHelpText>
        <label>Contact Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_gl_Letter_Salutation__c</fullName>
        <formula>IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;German&quot;), 
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot; Sehr geehrter Herr &quot;, 
			&quot;Ms.&quot;, &quot;Sehr geehrte Frau &quot;, 
			&quot;Mrs.&quot;, &quot;Sehr geehrte Frau &quot; ,
			&quot;Miss&quot;, &quot;Sehr geehrte Frau &quot;,
                        &quot;Herr&quot;, &quot;Sehr geehrter Herr &quot;, 
                        &quot;Frau&quot;, &quot;Sehr geehrte Frau &quot;,		
			&quot;&quot;) 
		&amp; 	IF( CONTAINS(TEXT(sf42_de_Akademic_Title__c), &quot;Prof&quot;), &quot;Professor &quot;,
				(
					IF( CONTAINS(TEXT(sf42_de_Akademic_Title__c), &quot;Dr&quot;), &quot;Dr. &quot;,
					&quot;&quot;
					)
		
				) 
			)
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	, 
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;Spanish&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Estimado Sr. &quot;, 
			&quot;Ms.&quot;, &quot;Estimada Sra. &quot;, 
			&quot;Mrs.&quot;, &quot;Estimada Sra. &quot; ,
			&quot;Miss&quot;, &quot;Estimada Sra. &quot;,
			&quot;&quot;) 
		&amp; IF( ptt_gl_Academic_Title__c = &quot;&quot;, &quot;&quot;, ptt_gl_Academic_Title__c &amp; &quot; &quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	, 
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;French&quot;) || ISPICKVAL( sf42_ca_Preferred_Language__c, &quot;French&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Monsieur &quot;, 
			&quot;Ms.&quot;, &quot;Mademoiselle &quot;, 
			&quot;Mrs.&quot;, &quot;Madame &quot; ,
			&quot;Miss&quot;, &quot;Mademoiselle &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	,
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;Italian&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Sig. &quot;, 
			&quot;Ms.&quot;, &quot;Sig.ra &quot;, 
			&quot;Mrs.&quot;, &quot;Sig.na &quot;,
			&quot;Miss&quot;, &quot;Sig.ra &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	,
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;Turkish&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Bay &quot;, 
			&quot;Ms.&quot;, &quot;Bayan &quot;, 
			&quot;Mrs.&quot;, &quot;Bayan &quot;,
			&quot;Miss&quot;, &quot;Bayan &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)	
	,
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;Portuguese&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Prezado Sr. &quot;, 
			&quot;Ms.&quot;, &quot;Prezada Sra. &quot;, 
			&quot;Mrs.&quot;, &quot;Prezada Sra. &quot;,
			&quot;Miss&quot;, &quot;Prezada Srta. &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)
	,
	IF( ISPICKVAL (ptt_gl_Communication_Language__c, &quot;English&quot;) || ISPICKVAL( sf42_ca_Preferred_Language__c, &quot;English&quot;),
	(
		CASE(Salutation , 
			&quot;Mr.&quot;, &quot;Dear Mr. &quot;, 
			&quot;Ms.&quot;, &quot;Dear Ms. &quot;, 
			&quot;Mrs.&quot;, &quot;Dear Mrs. &quot;,
			&quot;Miss&quot;, &quot;Dear Miss &quot;,
			&quot;&quot;) 
		&amp; LastName 
		&amp; &quot;,&quot;
	)	
	,
	&quot;Wrong Contact language&quot;
	)
	)
	)
	)
	)
	)
)</formula>
        <label>Letter Salutation new</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_gl_Use_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use as Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ptt_it_IT_Region__c</fullName>
        <formula>IF( MailingState = &quot;&quot;,null,
IF(CONTAINS(&quot;AQ:CH:PE:TE:&quot;, MailingState),&quot;Abruzzo&quot;,
IF(CONTAINS(&quot;MT:PZ:&quot;, MailingState),&quot;Basilicata&quot;,
IF(CONTAINS(&quot;CZ:CS:KR:RC:VV:&quot;, MailingState),&quot;Calabria&quot;,
IF(CONTAINS(&quot;AV:BN:CE:NA:SA:&quot;, MailingState),&quot;Campania&quot;,
IF(CONTAINS(&quot;BO:FE:FC:MO:PR:PC:RA:RE:RN:&quot;, MailingState),&quot;Emilia-Romagna&quot;,
IF(CONTAINS(&quot;GO:PN:TS:UD:&quot;, MailingState),&quot;Friuli-Venezia Giulia&quot;,
IF(CONTAINS(&quot;FR:LT:RI:RM:VT:&quot;, MailingState),&quot;Lazio&quot;,
IF(CONTAINS(&quot;GE:IM:SP:SV:&quot;, MailingState),&quot;Liguria&quot;,
IF(CONTAINS(&quot;BG:BS:CO:CR:LC:LO:MN:MI:MB:PV:SO:VA:&quot;, MailingState),&quot;Lombardia&quot;,
IF(CONTAINS(&quot;AN:AP:FM:MC:PU:&quot;, MailingState),&quot;Marche&quot;,
IF(CONTAINS(&quot;CB:IS:&quot;, MailingState),&quot;Molise&quot;,
IF(CONTAINS(&quot;AL:AT:BI:CN:NO:TO:VB:VC:&quot;, MailingState),&quot;Piemonte&quot;,
IF(CONTAINS(&quot;BA:BT:BR:FG:LE:TA:&quot;, MailingState),&quot;Puglia&quot;,
IF(CONTAINS(&quot;CA:CI:VS:NU:OG:OT:OR:SS:&quot;, MailingState),&quot;Sardegna&quot;,
IF(CONTAINS(&quot;AG:CL:CT:EN:ME:PA:RG:SR:TP:&quot;, MailingState),&quot;Sicilia&quot;,
IF(CONTAINS(&quot;AR:FI:GR:LI:LU:MS:PI:PT:PO:SI:&quot;, MailingState),&quot;Toscana&quot;,
IF(CONTAINS(&quot;BZ:TN:&quot;, MailingState),&quot;Trentino-Alto Adige&quot;,
IF(CONTAINS(&quot;PG:TR:&quot;, MailingState),&quot;Umbria&quot;,
IF(CONTAINS(&quot;AO:&quot;, MailingState),&quot;Valle d&apos;Aosta&quot;,
IF(CONTAINS(&quot;BL:PD:RO:TV:VE:VR:VI:&quot;, MailingState),&quot;Veneto&quot;, null
)))))))))))))))))))))</formula>
        <label>IT Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_phone_numbers__c</fullName>
        <formula>TRIM(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot;+&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;/&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Phone number striped from + - / and space for better searching.</inlineHelpText>
        <label>Phone for search</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Business_Unit__c</fullName>
        <label>Business Unit Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_My_Contacts__c</fullName>
        <formula>IF ( $User.Id =  OwnerId , &quot;1&quot;, CASE ( $User.FirstName &amp;&quot; &quot;&amp; $User.LastName, Account.sf42_Accountmanager_ALI__c ,&quot;1&quot;,Account.sf42_Accountmanager_CM__c,&quot;1&quot;,Account.sf42_Accountmanager_NDT__c ,&quot;1&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_Old_ID__c</fullName>
        <label>Old ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sf42_ca_Engaged_us_previously__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CA Engaged us previously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_ca_Preferred_Language__c</fullName>
        <label>CA Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_ca_Salutation_French__c</fullName>
        <formula>CASE(Salutation ,&quot;Mr.&quot;,&quot;M. &quot;, &quot;Mrs.&quot;, &quot;Mme &quot;, &quot;Ms.&quot;,&quot;Mme&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Salutation French</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_18_digit_ID_for_Campaign__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 digit ID (for Campaign selection)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Akademic_Title__c</fullName>
        <label>Akademic Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>B.Eng.</fullName>
                </value>
                <value>
                    <fullName>B.Sc.</fullName>
                </value>
                <value>
                    <fullName>Betr. Ing.</fullName>
                </value>
                <value>
                    <fullName>DI</fullName>
                </value>
                <value>
                    <fullName>DI (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Betriebsw. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.Inf.</fullName>
                </value>
                <value>
                    <fullName>Dipl.Inf. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing. (BA)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing. (TU)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Ing. oec.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Kfm.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Kfm. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Phys.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Wirt.-Ing. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Wirtsch.-Ing.</fullName>
                </value>
                <value>
                    <fullName>Dipl.-Wirtsch.-Ing. (FH)</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Dr. hc</fullName>
                </value>
                <value>
                    <fullName>Dr.-Ing.</fullName>
                </value>
                <value>
                    <fullName>Dr. rer. nat</fullName>
                </value>
                <value>
                    <fullName>Dr. rer. nat Dipl.-Ing.</fullName>
                </value>
                <value>
                    <fullName>Ing.</fullName>
                </value>
                <value>
                    <fullName>Ing. (grad.)</fullName>
                </value>
                <value>
                    <fullName>M.Eng.</fullName>
                </value>
                <value>
                    <fullName>M.Sc.</fullName>
                </value>
                <value>
                    <fullName>Magister Dr.</fullName>
                </value>
                <value>
                    <fullName>Obering.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_de_City_PO_Box__c</fullName>
        <label>City (for PO Box)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Division__c</fullName>
        <label>Division</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sf42_de_Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sf42_de_Function__c</fullName>
        <label>OO: Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Information_1_3__c</fullName>
        <label>Information 1-3</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_de_Manual_distribution_list__c</fullName>
        <label>Manual distribution list</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sf42_de_Notes_Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Notes Migration ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_PO_Box__c</fullName>
        <label>PO Box</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Position__c</fullName>
        <inlineHelpText>Please enter job title as printed on the business card.</inlineHelpText>
        <label>OO: Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_Transfer_address_from_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Transfer address from Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_de_Website__c</fullName>
        <description>Dieses Feld wurde bei der Migration befüllt, die Information findet sich im Account. Diese Feld sollte zu einem späteren Zeitpunkt gelöscht werden.</description>
        <label>OO: Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sf42_de_ZIP_PO_Box__c</fullName>
        <label>ZIP (for PO Box)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_de_type_of_shipment__c</fullName>
        <label>Default Way to send</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Send to mailing address</fullName>
                    <default>true</default>
                    <label>Send to mailing address</label>
                </value>
                <value>
                    <fullName>Send to PO BOX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_gl_ALI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ALI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_CM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_Department_from_Lead__c</fullName>
        <label>Department from Lead</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_gl_Executive_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executive Position</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>